# shikka

./: Cargo.toml  README.md
.github/: dependabot.yaml  pull_request_template.md
.github/workflows/: rust.yaml  tests.yaml
src/: env.rs  error.rs  lib.rs  sampler.rs
src/actors/: trpo.rs
src/critics/: dae.rs  mod.rs
src/env/: mod.rs
src/estimations/: mod.rs
src/pg/: trpo.rs
src/popt/: mod.rs  trpo.rs
src/poptim/: mod.rs  trpo.rs
src/strategies/: sampling.rs
